TUe moving update

--- a/_data/info.yml
+++ b/_data/info.yml
@@ -9,7 +9,7 @@ Info:
     #avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: pierre.mollo[at]univ-reims[dot]fr
+    email: p.m.mollo[at]tue[dot]nl
     phone: 
     website: pmollo.perso.math.cnrs.fr
     linkedin: pierre-mollo-8b5573173
