--- a/.gitattributes
+++ b/.gitattributes
@@ -20,3 +20,5 @@ assets/pres/cemracs2021.pdf filter=lfs diff=lfs merge=lfs -text
 assets/css/style.scss filter=lfs diff=lfs merge=lfs -text
 assets/pres/seminria2022.pdf filter=lfs diff=lfs merge=lfs -text
 assets/pres/smai2021.pdf filter=lfs diff=lfs merge=lfs -text
+assets/pres/4tuami.pdf filter=lfs diff=lfs merge=lfs -text
+assets/pres/defense.pdf filter=lfs diff=lfs merge=lfs -text
