--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -32,3 +32,4 @@ jobs:
           jekyll_baseurl: ''         # Default is according to _config.yml
           bundler_ver: '>=0'         # Default is latest bundler version
           actor: ''                  # Default is the GITHUB_ACTOR
+          pre_build_commands: pacman -S --noconfirm nodejs npm libvips lcms2 openjpeg2 libpng libwebp libheif imagemagick openslide libjxl poppler-glib
